k8s/longhorn/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-route
  namespace: longhorn-system
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal-gw
      namespace: gateway-internal
      sectionName: https-wild-terminate
  hostnames:
    - longhorn.home.arpa
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: Strict-Transport-Security
                value: "max-age=31536000; includeSubDomains; preload"
              - name: X-Content-Type-Options
                value: "nosniff"
              - name: X-Frame-Options
                value: "DENY"
      backendRefs:
        - name: longhorn-frontend
          group: ""
          kind: Service
          port: 80
          weight: 1
